@@ -1,3 +1,6 @@
+2015-04-08  Kirit Saelensminde  <kirit@felspar.com>
+ Fix some pylint errors about use of `type` and `isinstance`.
+
 2014-10-21  Kirit Saelensminde  <kirit@felspar.com>
  Fix the data_link function so that it works with instances that happen to be `None`.
 
